--- a/simple_login_example/templates/users/login.html
+++ b/simple_login_example/templates/users/login.html
@@ -7,6 +7,12 @@
     <title>로그인 페이지</title>
 </head>
 <body>
-    <h1 style="color: blue;">로그인 성공!!</h1>
+    <form method="POST">{% csrf_token %}
+        <label for="username">아이디</label>
+        <input type="text" name="username" id="username">
+        <label for="password">비밀번호</label>
+        <input type="password" name="password" id="password">
+        <input type="submit">
+    </form>
 </body>
 </html>
